# corelia

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  skills-lock.json  vite.config.js
docs/: MVP_DEVELOPMENT_GUIDE.md  PLUGIN_DEV.md  PROJECT_ANALYSIS_REPORT.md  README.md  ROADMAP.md  TODO.md  WIKI_SUMMARY.md
docs/analysis/: ARCHITECTURE_OPTIMIZATION_REPORT.md
docs/architecture/: README.md  performance.md  plugin-system.md  security.md  tech-stack.md
docs/components/: README.md  frontend.md  plugin-system.md  quickjs-runtime.md
docs/development/: README.md  conventions.md  environment.md  mvp-guide.md  plugin-development.md
docs/reference/: competitors.md
docs/wiki/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md  PLUGIN_SYSTEM.md  README.md
patches/crypto/: Cargo.toml
plugins/app-launcher/: index.js  plugin.json
plugins/calc/: index.js  plugin.json
plugins/clipboard/: index.js  plugin.json
plugins/file-search/: index.js  plugin.json
plugins/hello-world/: index.js  plugin.json
plugins/qrcode/: index.js  plugin.json
plugins/screenshot/: index.js  plugin.json
plugins/shortcuts/: index.js  plugin.json
plugins/url-toolkit/: index.js  plugin.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  clipboard.rs  mod.rs  plugin.rs  shell.rs  shortcut.rs  store.rs  window.rs
src-tauri/src/commands/config/: app.rs  macros.rs  mod.rs  system.rs  user.rs
src-tauri/src/plugins/: api_bridge.rs  hot_reload.rs  loader.rs  mod.rs  quickjs_runtime.rs  registry.rs  wasm_bridge.rs
src-tauri/src/plugins/api_bridge/: clipboard.rs  context.rs  db_storage.rs  dialog.rs  fetch.rs  fs.rs  mod.rs  notification.rs  path.rs  process.rs  shell.rs  wasm.rs  window.rs
src-tauri/src/plugins/loader/: health.rs  instance.rs  lifecycle.rs  manifest.rs  mod.rs  scanner.rs  state.rs
src-tauri/src/services/: autostart_service.rs  clipboard_service.rs  config_service.rs  mod.rs  plugin_service.rs  shell_service.rs  store_service.rs  window_service.rs
src/lib/: CONFIG.md  api.ts  config.ts  index.ts
src/routes/: +page.svelte
wiki/: ARCHITECTURE.md  README.md  ROADMAP.md  SRS.md  SYSTEM-CONFIG.md  config.yaml
wiki/problem/: 00-summary.md  (+5 more)
(+68 files in other folders)
