[package]
name = "corelia"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "corelia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rquickjs = { version = "0.11.0", features = ["macro"] }
arboard = "3.6.1"
open = "5.3.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-autostart = "2.5.1"
once_cell = "1.21.4"
image = "0.25.10"
rand = "0.9"

[features]
# 默认 feature
default = []
# 包含所有功能的 feature（供 rust-analyzer 使用）
all = []
